# RustyKitchen

./: .Essentials.swp  .gitignore  Essentials  NotTextbook.rs  README.md  bookQuotes.txt  elegant_but_why.md  linux_environment_helpers  living_without_clone.rs  neatstuff  pitfalls  test  whatis
Advanced_Features_of_Rust/: contents.txt
Advanced_Features_of_Rust/Advanced_Traits/: associated_functions.rs  associated_types  associated_types.rs  fix_me_ina_year.rs  metric_conversions  metric_conversions.rs  same_name_traits  same_name_traits.rs  string_formatting_w_super_traits  string_formatting_w_super_traits.rs  super_traits
Advanced_Features_of_Rust/Advanced_Types/: aside.txt
Advanced_Features_of_Rust/Unsafe_Rust/: RawPointers.txt  UnsafeSuperpowers.txt  (+12 more)
Blog/: overview.txt
Caching/: Cargo.toml
Concurrency/: cliffnotes.md
Experimenting/Concurrency/fractals/: Cargo.toml
Experimenting/Concurrency/fractals/src/: main.rs
Experimenting/Concurrency/parallel/: Cargo.toml
Experimenting/Concurrency/parallel/src/: Generate jpg thumbnails in parallel.rs  Map reduce in parallel.rs  Mutate the elements of an array in parallel.rs  Search items using given predicate in parallel.rs  Sort a vector in parallel.rs  Test in parallel if any or all elements of a collection match a given predicate.rs
Experimenting/Concurrency/threads/: Cargo.toml
Experimenting/Concurrency/threads/src/: concurrent_SHA1_ofiso.rs  maintain_global_mut_state.rs  spawn_thread.rs
Experimenting/Logging/debugging/: Cargo.toml
Experimenting/Logging/debugging/src/: continue.txt  enable_log_levels_per_module.rs  log_a_debug_message_to_the_console.rs  log_an_error_message_to_the_console.rs  log_messages_to_a_custom_location.rs  log_messages_with_a_custom_logger.rs  log_to_stdout_instead_of_stderr.rs  log_to_the_unix_syslog.rs  use_a_custom_environment_variable_to_set_up_logging.rs
FizzBuzz/: main  main.rs
Generics/: generic_functions.rs  impl_generics  impl_generics.rs  impl_mixup  impl_mixup.rs  struct_generics.rs  type_checking.rs
SmartPointers/: Box<T>  recap.md  syntax_boxt  syntax_boxt.rs
Summary/: SPTraits.txt  SmartPointers.txt
annotations/: main.rs
clients/: Cargo.toml  consume_paginated_api_restapi.rs  create_delete_gist.rs  download_file_tempdir.rs  partial_dwnld_HTTPheaders.rs  post_file_paste-rs.rs
clients/src/: Make a HTTP GET request.rs  calling_github_api.rs
coin_matcher/: Cargo.toml
dangle/: Cargo.toml
edgedb/auth_test/: Cargo.toml
edgedb/auth_test/src/: main.rs
learningGraphics/: Cargo.toml
learningGraphics/src/: main.rs  source.txt
literals/: main.rs
logic/: main  main.rs
mac/: Cargo.toml  disclaimer.txt
media_types/: Cargo.toml
ownership/: Cargo.toml  objective.txt
ownership2/: Cargo.toml
references/: Cargo.toml
scope/: heap_str_mutex.rs  heap_string.rs
self_exercise_1/: Cargo.toml
self_exercise_2/: Cargo.toml
shadowing/: Cargo.toml
slice_type_pretest/: Cargo.toml
structures/: .main.rs.swp  main  main.rs
structures/Activity/: Cargo.toml  chromeTabs.txt  main.rs  nano.save
test_struct/: Cargo.toml
traits_as_parameters/: Cargo.toml
tuples/: activity.txt  main  main.rs
utilities/: appending  appending.rs  factorial.rs
wat/: no_null!  slicing_strings  slicing_strings.rs
web_programming/: Cargo.toml
web_programming/src/: check_a_webpage_for_broken_links.rs  extract_all_links_from_webpage.rs  extract_unique_mediawiki_markup_links.rs
web_programming/url/: create_URLs_from_base.rs  create_base_URL_removing_path_segments.rs  extract_URL_origin_(scheme_host_port).rs  extract_URL_origin_(scheme_host_port)2.rs  parse_url_from_string.rs  remove_URL_frag_identifiers_query_identifiers.rs
(+306 files in other folders)
