[package]
name = "clients"
version = "0.1.0"
authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
serde_derive = "1.0.98"
serde_json = "1.0.40"
tempdir = "0.3.7"
error-chain = "0.12.1"
