[package]
name = "web_programming"
version = "0.1.0"
authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
select = "0.4.3"
url = "2.1.0"
lazy_static = "1.3.0"
regex = "1.2.1"
