[package]
name = "Activity"
version = "0.1.0"
authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.0"
log = "0.4"
env_logger = "0.5.10"
sdl2 = "0.31.0"
rand = "0.4"
libc = "0.2.36"
# mpeg_encoder = { git = "https://github.com/sebcrozet/mpeg_encoder" }

[features]
smooth_animation = []
