[package]
name = "parallel"
version = "0.1.0"
authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1.0"
rand = "0.7.0"
glob = "0.3.0"
image = "0.22.1"
