[package]
name = "threads"
version = "0.1.0"
authors = ["David Golembiowski <dmgolembiowski@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.2"
lazy_static = "1.3.0"
walkdir = "2.2.9"
ring = "0.16.5"
num_cpus = "1.10.1"
threadpool = "1.7.1"
